# the-forge-glfw

./: .editorconfig  .gitignore  CMakeLists.txt  GEN_VS.bat  LICENSE  README.md
src/: demo.cpp  demo.h  main.cpp
src/interfaces/linux/: linuxBase.cpp  linuxFileSystem.cpp  linuxLog.cpp  linuxThread.cpp
src/interfaces/windows/: windowsBase.cpp  windowsFileSystem.cpp  windowsLog.cpp  windowsThread.cpp  windowsTime.cpp
